[project]
name = "nonebot_plugin_suda_electricity"
version = "0.1.0"
description = "苏州大学宿舍电费查询与推送"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.2",
    "cryptography>=46.0.7",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "nonebot-plugin-alconna>=0.61.1",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-plugin-uninfo>=0.11.0",
    "nonebot2>=2.5.0",
    "orjson>=3.11.8",
    "pydantic>=2.12.5",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "hypothesis>=6.151.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]


[tool.pytest.ini_options]
pythonpath = ["src"] 
testpaths = ["tests"]
addopts = "--cov=src/nonebot_plugin_suda_electricity --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "property: Property-based tests using Hypothesis",
    "integration: Integration tests with real object graphs",
    "slow: Tests that are slow (e.g. fastembed model download)",
]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:.*is not a Python type.*:pydantic._internal._generate_schema.ArbitraryTypeWarning",
    "ignore:This declarative base already contains a class with the same class name and module name as nonebot_plugin_suda_electricity\\.db\\.models\\..*:sqlalchemy.exc.SAWarning",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "def __repr__",
]

[tool.coverage.run]
branch = true
source = ["src/nonebot_plugin_suda_electricity"]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
